--- a/hw1/hw1.ipynb
+++ b/hw1/hw1.ipynb
@@ -8672,7 +8672,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# open the kml file and place altitude to the polygons\n"
+    "\"\"\"\n",
+    "Feedback (The presentation of the best graphs)\n",
+    "\n",
+    "1. Problem Definition\n",
+    " - Project Execution Process / Write down what I wanted to know after looking at the data\n",
+    " \n",
+    "2. Core code\n",
+    " - Put the whole codes (To make the fonts smaller is somewhat? I guess? Allowed if there are not enough space)\n",
+    " - Data was processed before drawn: max / min 데이터 뿐만 아니라, 일교차 역시 그림으로 나타내었음.\n",
+    " - 3D Plot ( 지도 위에 뿌리진 않았지만, 좌표를 활용해서 나타내었음. )\n",
+    " \n",
+    "3. Visualization\n",
+    " - Daily Temperature Range를 표현하고, Daily Temperature를 가운데에 그렸음. I think it is a very good idea to express\n",
+    " the daily cross (일교차) and daily average temperature.\n",
+    " \n",
+    "4. Cut down the reference\n",
+    "\n",
+    "5. Write down the discussions more than the reference\n",
+    "\n",
+    "To sum up, I focused on the 'user' that see the graphs, so I mainly did care about how to visualize the whole data to make the user\n",
+    "can get what it means in a glance. However, to analyze the data and write down the results as a researcher was more important than\n",
+    "the user-focused view.\n",
+    "\n",
+    "Thank you for the presentation, it was helpful, full of information and I enjoyed it very much.\n",
+    "I want to ask what kind of python library did you use in figure 3, to load the map and match the coordinates with the bar graphs.\n",
+    "\n",
+    "matplotlib에서 지도를 깔고 그 위에 그래프 그리는 라이브러리:\n",
+    "shapefile as shp (shapefile을 로딩하고, 그 위에 coordinates를 맞춘듯 ㄷㄷㄷㄷ 대박)\n",
+    "pyproject import Transformer\n",
+    "\n",
+    "\"\"\""
    ]
   }
  ],
